# AI-humanoid-robotics

./: .gitignore  CLAUDE.md  README.md  test_api_integration.py  test_connection.html  test_integration_mock.py  test_mock_server.py
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: Dockerfile  HF_DEPLOYMENT_GUIDE.md  README.md  SPACE_README.md  app.py  chat_widget.html  huggingface.yml  init_db.py  pyproject.toml  reset_vector_db.py  start.sh  test_basic_functionality.py  validate_e2e.py
backend/src/: chat_widget.js  database_schema.py  main.py
backend/src/api/: dependencies.py
backend/src/api/v1/: chat.py  health.py  ingest.py
backend/src/core/: config.py  database.py  vector_db.py
backend/src/models/: content.py  conversation.py  user_query.py
backend/src/services/: agent.py  embedding.py  ingestion.py  retrieval.py  storage.py
code/module-1/: example-1-sensor-loop.py  example-2-balance-logic.py  example-3-object-recognition.py  example-4-digital-twin.py  example-5-embodiment.py  test.sh
code/module-2/: example-1-physics-scenario.py  example-2-human-robot-interaction.py  example-3-contact-modeling.py  example-4-force-analysis.py  example-5-friction-modeling.py  test.sh
code/module-3/: example-1-vision-pipeline.py  example-2-frame-analysis.py  test.sh  (+3 more)
diagrams/: meta.yaml
docs/: capstone-project.md  conclusion.md  docusaurus.config.js  intro.md  package-lock.json  package.json  sidebars.js
examples/: meta.yaml
scripts/: check-wordcount.py  link-check.sh  verify.sh
templates/: example.md  frontmatter.md  page.md
(+101 files in other folders)
